roof_hunter/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: roof-hunter
  labels:
    app.kubernetes.io/name: roof-hunter
